[project]
name = "ldstega-unofficial"
version = "0.1.0"
description = "Unofficial PyTorch implementation of LDStega: Practical and Robust Generative Image Steganography based on Latent Diffusion Models (ACM MM 2024)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/Armin2/ldstega-unofficial"

dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "safetensors>=0.7.0",
    "scikit-image>=0.24.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tqdm>=4.66.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
]
